--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
   <!-- Plugins CSS -->
   <!-- <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css"> -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 
   <!-- Load DataCamp Light JS-->
   <script src="https://cdn.datacamp.com/datacamp-light-latest.min.js"></script>
@@ -37,20 +38,16 @@
         <!--img class="profile" src="assets/images/profile.png" alt="" /-->
         <img class="profile img-circle morph" src="assets/images/profile.jpg" alt="" />
         <h1 class="name">Conrad MacCormick</h1>
-        <!-- <h3 class="tagline">Senior Data Analyst</h3> -->
+        <!-- <h3 class="tagline">Senior Data Scientist</h3> -->
         <!-- <span style="display: inline;"> > </span> -->
         <h3 class="tagline">Data <span class="typed" style="display: inline;"></span></h3>
       </div><!--//profile-container-->
 
       <div class="contact-container container-block">
         <ul class="list-unstyled contact-list">
-          <!-- <li class="email"><i class="fa fa-envelope"></i><a href="mailto: first.last@gmail.com">Email me</a></li> -->
-          <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:64 27 XXXXXX">+64 27 XXXXXX</a></li> -->
-          <!-- <li class="website"><i class="fa fa-globe"></i><a href="https://conradmaccormick.com" target="_blank">conradmaccormick.com</a></li> -->
           <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://nz.linkedin.com/in/conrad-maccormick-09699591" target="_blank">conrad-maccormick</a></li>
           <li class="github"><i class="fa fa-github"></i><a href="https://github.com/conrad-mac" target="_blank">conrad-mac</a></li>
           <li class="stackoverflow"><i class="fa fa-stack-overflow"></i><a href="http://stackoverflow.com/users/7359650/conrad-mac" target="_blank">conrad-mac</a></li>
-          <!--li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li-->
           <li class="email"><i class="fa fa-envelope"></i>conrad . maccormick at gmail . com</li>
         </ul>
       </div><!--//contact-container-->
@@ -74,11 +71,12 @@
       <div class="interests-container container-block">
         <h2 class="container-block-title">Interests</h2>
         <ul class="list-unstyled interests-list">
-          <li><i class="fa fa-music"></i> Playing guitar</li>
-          <li><i class="fa fa-book"></i> Reading</li>
-          <li><i class="fa fa-snowflake-o"></i> Snowboarding</li>
-          <li><i class="fa fa-terminal"></i> Programming</li>
-          <li><i class="fa fa-bar-chart"></i> Making data visualisations</li>
+          <li><i class="fas fa-baby"></i> Being with my son</li>
+            <li><i class="fas fa-guitar"></i> Playing guitar</li>
+          <li><i class="fas fa-book"></i> Reading</li>
+          <li><i class="fas fa-snowboarding"></i> Snowboarding</li>
+          <li><i class="fas fa-terminal"></i> Programming</li>
+          <li><i class="fas fa-bar-chart"></i> Making data visualisations</li>
         </ul>
       </div><!--//interests-->
 
@@ -90,20 +88,14 @@
         <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
         <div class="summary">
           <p>
-            I am a highly motivated analyst with more than five years experience in New Zealand's public sector.
-            I am passionate about exploring, analysing and solving problems with data of all kinds. I have experience and proficiency using a wide range of analytical software and communicating results to non-technical audiences.
+            I am a highly motivated data scientist with more than eight years’ experience in New Zealand's public sector. I am passionate about exploring, analysing and solving problems with data of all kinds. I have experience and proficiency using a wide range of analytical software and communicating results to non-technical audiences.
           </p>
 
           <p>
-            I graduated from Victoria University of Wellington in 2010 with a Bachelor of Science, majoring in geography.
-            As well as geography, I also completed papers in statistics and political science.
-          </p>
-
-          <p>
-            I have worked as an analyst at Statistics New Zealand and the Ministry of Social Development and am currently on secondment to the Social Investment Agency (formerly the Social Investment Unit) as a Senior Analyst. I am part of a team that works daily with Statistics New Zealand's Integrated Data Infrastructure (IDI).
+            I have worked as an Analyst at Statistics New Zealand and the Ministry of Social Development, as a Senior Analyst at the Social Investment Agency and as a Data Analyst at the Electricity Authority.
           </p>
           <p>
-            I am currently co-organiser of the <a href="https://www.meetup.com/Wellington-R-Users-Group-WRUG/">Wellington R User's Group (WRUG)</a> .
+            My current role is at <a href="https://www.nicholsonconsulting.co.nz/">Nicholson Consulting</a> as a <b>Senior Data Scientist</b>.
           </p>
         </div><!--//summary-->
       </section><!--//section-->
@@ -114,13 +106,26 @@
         <div class="item">
           <div class="meta">
             <div class="upper-row">
+              <h3 class="job-title">Senior Data Scientist</h3>
+              <div class="time">September 2019 - Present</div>
+            </div><!--//upper-row-->
+            <div class="company">Nicolson Consulting</div>
+          </div><!--//meta-->
+          <div class="details">
+            <p>As a Senior Data Scientist at Nicholson Consulting, my duties involve having a lead role working collaboratively with our CEO, Principal Data Scientist, Senior Data Scientists, Data Scientist, Software Developers and clients to deliver various analytical projects.</p>
+          </div><!--//details-->
+        </div><!--//item-->
+
+        <div class="item">
+          <div class="meta">
+            <div class="upper-row">
               <h3 class="job-title">Data Analyst</h3>
-              <div class="time">January 2018 - present</div>
+              <div class="time">January 2018 - September 2019</div>
             </div><!--//upper-row-->
             <div class="company">Electricity Authority</div>
           </div><!--//meta-->
           <div class="details">
-            <p>I currently work as a Data Analyst in the Market Analytics team at the Electricity Authority.</p>
+            <p>As a Data Analyst at the Electricity Authority, my duties involved analysing and building models using New Zealand electricity data. I gained experience using complex optimisation modelling techniques.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -293,7 +298,7 @@
           </div><!--//item-->
 
           <div class="item">
-            <h3 class="level-title">Javascript &amp; HTML</h3>
+            <h3 class="level-title">JavaScript &amp; HTML</h3>
             <div class="level-bar">
               <div class="level-bar-inner" data-level="70%">
               </div>
@@ -376,16 +381,17 @@
                 geom_bar(data = filter(mpg, class == "suv"),
                          fill = "steelblue", width = 0.6) +
                 coord_flip() +
-                ggtitle("Most cars in this dataset are SUVs!") +
+                ggtitle("SUVs make up the largest number of cars in this dataset!") +
                 xlab("Class") +
                 theme_minimal() +
-                theme(panel.grid = element_blank()
-                      ,panel.background = element_rect(fill = "transparent",
-                        colour = NA)
-                      ,plot.background = element_rect(fill = "transparent",
-                        colour = NA)
-                      ,axis.line.x = element_line(colour = "grey")
-                      ,axis.ticks.x = element_line(colour = "grey"))
+                theme(panel.grid = element_blank(),
+                      panel.background = element_rect(fill = "transparent",
+                      colour = NA),
+                      plot.background = element_rect(fill = "transparent",
+                        colour = NA),
+                      axis.line.x = element_line(colour = "grey"),
+                      axis.ticks.x = element_line(colour = "grey")
+                    )
 
           </code>
           <code data-type="solution">
@@ -419,7 +425,7 @@
   <footer class="footer">
     <div class="text-center">
       <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-      <small class="copyright">Framework designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+      <small class="copyright">Framework designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
     </div><!--//container-->
   </footer><!--//footer-->
 
@@ -437,7 +443,7 @@
                 "Wrangler",
                 "Visualiser",
                 "Communicator",
-                "Analyst",
+                "Analyser",
                 "Scientist"
 
               ],
