Updated MSD end date

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="meta">
             <div class="upper-row">
               <h3 class="job-title">Forecasting and Costing Analyst</h3>
-              <div class="time">January 2015 - Present</div>
+              <div class="time">January 2015 - December 2017</div>
             </div><!--//upper-row-->
             <div class="company">Ministry of Social Development (MSD)</div>
           </div><!--//meta-->
