--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
         <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
         <div class="summary">
           <p>
-            I am a highly motivated data scientist with more than eight years’ experience in New Zealand's public sector. I am passionate about exploring, analysing and solving problems with data of all kinds. I have experience and proficiency using a wide range of analytical software and communicating results to non-technical audiences.
+            I am a highly motivated data professional with more than 10 years' experience. I am passionate about exploring, analysing and solving problems with all kinds of data. 
           </p>
 
           <p>
-            I have worked as an Analyst at Statistics New Zealand and the Ministry of Social Development, as a Senior Analyst at the Social Investment Agency and as a Data Analyst at the Electricity Authority.
+            I have experience leading data projects and proficiency using a wide range of analytical software and communicating results to non-technical audiences.
+            <!-- I have worked as an Analyst at Statistics New Zealand and the Ministry of Social Development, as a Senior Analyst at the Social Investment Agency and as a Data Analyst at the Electricity Authority. -->
           </p>
           <p>
-            My current role is at <a href="https://www.nicholsonconsulting.co.nz/">Nicholson Consulting</a> as a <b>Senior Data Scientist</b>.
+            My current role is at <a href="https://www.nicholsonconsulting.co.nz/">Nicholson Consulting</a> as an <b>Analytics Lead</b>.
           </p>
         </div><!--//summary-->
       </section><!--//section-->
@@ -107,13 +108,26 @@
         <div class="item">
           <div class="meta">
             <div class="upper-row">
-              <h3 class="job-title">Senior Data Scientist</h3>
-              <div class="time">September 2019 - Present</div>
+              <h3 class="job-title">Analytics Lead</h3>
+              <div class="time">November 2021 - Present</div>
             </div><!--//upper-row-->
-            <div class="company">Nicolson Consulting</div>
+            <div class="company">Nicholson Consulting</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As a Senior Data Scientist at Nicholson Consulting, my duties involve having a lead role working collaboratively with our CEO, Principal Data Scientist, Senior Data Scientists, Data Scientist, Software Developers and clients to deliver various analytical projects.</p>
+            <p>As an Analytics Lead at Nicholson Consulting, my duties involve having a lead role overseeing projects and working collaboratively with our CEO, Principal Data Scientist, Senior Data Scientists, Data Scientists, and clients to deliver various analytical projects.</p>
+          </div><!--//details-->
+        </div><!--//item-->
+
+        <div class="item">
+          <div class="meta">
+            <div class="upper-row">
+              <h3 class="job-title">Senior Data Scientist</h3>
+              <div class="time">September 2019 - November 2021</div>
+            </div><!--//upper-row-->
+            <div class="company">Nicholson Consulting</div>
+          </div><!--//meta-->
+          <div class="details">
+            <p>As a Senior Data Scientist at Nicholson Consulting, my duties involved having a lead role working collaboratively with our CEO, Principal Data Scientist, Senior Data Scientists, Data Scientist, Software Developers and clients to deliver various analytical projects.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -139,10 +153,8 @@
             <div class="company">Social Investment Agency/Unit</div>
           </div><!--//meta-->
           <div class="details">
-            <p>In April 2016, the Social Sector Investment Change Program became the Social Investment Unit and,
-              in July 2017, the Social Investment Unit became the Social Investment Agency.
-              I was seconded as a Senior Analyst. My responsibilities in this role included
-              using Statistics NZ’s Integrated Data Infrastructure (IDI) to explore and understand the effectiveness
+            <p>In April 2016, the Social Sector Investment Change Program became the Social Investment Unit and, in July 2017, the Social Investment Unit became the Social Investment Agency.
+              I was seconded as a Senior Analyst. My responsibilities in this role included using Statistics NZ's Integrated Data Infrastructure (IDI) to explore and understand the effectiveness
               of government investment in social services.</p>
           </div><!--//details-->
         </div><!--//item-->
@@ -156,9 +168,7 @@
             <div class="company">Social Sector Investment Change Program (SSICP)</div>
           </div><!--//meta-->
           <div class="details">
-            <p>From October 2015 I was part of the Social Sector
-              Investment Change Programme (SSICP). My role involved coordinating and helping to
-              project manage a software proof-of-concept which included stakeholder engagement
+            <p>From October 2015 I was part of the Social Sector Investment Change Programme (SSICP). My role involved coordinating and helping to project manage a software proof-of-concept which included stakeholder engagement
               with both NGOs and a variety of government agencies.</p>
           </div><!--//details-->
         </div><!--//item-->
@@ -173,8 +183,7 @@
           </div><!--//meta-->
           <div class="details">
             <p>
-              In September 2015 I was located at the Treasury to work with the Analytics and Insights team.
-              I helped to analyse and understand the life pathways of young New Zealanders using Statistics
+              In September 2015 I was located at the Treasury to work with the Analytics and Insights team. I helped to analyse and understand the life pathways of young New Zealanders using Statistics
               New Zealand’s Integrated Data Infrastructure (IDI).
             </p>
           </div><!--//details-->
@@ -190,8 +199,7 @@
           </div><!--//meta-->
           <div class="details">
             <p>
-              My role at the Ministry of Social Development was as a Forecasting and Costing Analyst.
-              My responsibilities included regular forecasting of Vote Social Development appropriations
+              My role at the Ministry of Social Development was as a Forecasting and Costing Analyst. My responsibilities included regular forecasting of Vote Social Development appropriations
               and cost modelling of benefit-related policies.
             </p>
 
@@ -208,8 +216,7 @@
           </div><!--//meta-->
           <div class="details">
             <p>
-              I worked as a Statistical Analyst at Statistics New Zealand. I worked in the
-               Statistical Methods unit where my role utilised my expertise in a variety of methodological areas.
+              I worked as a Statistical Analyst at Statistics New Zealand. I worked in the Statistical Methods unit where my role utilised my expertise in a variety of methodological areas.
             </p>
           </div><!--//details-->
         </div><!--//item-->
@@ -440,12 +447,14 @@
       $(function(){
           $(".typed").typed({
               strings: [
+                "Leader",
                 "Explorer",
                 "Wrangler",
                 "Visualiser",
                 "Communicator",
                 "Analyser",
-                "Scientist"
+                "Scientist",
+                "Professional"
 
               ],
               typeSpeed: 130
