--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="profile-container">
         <!--img class="profile" src="assets/images/profile.png" alt="" /-->
         <!-- <img class="profile img-circle morph" src="assets/images/profile.jpg" alt="" /> -->
-        <img id="my-img" class="profile img-circle morph" src="assets/images/profile3.jpg" onmouseover="hover(this);" onmouseout="unhover(this);" />
+        <img id="my-img" class="profile img-circle morph" src="assets/images/profile3.png" onmouseover="hover(this);" onmouseout="unhover(this);" />
         <h1 class="name">Conrad MacCormick</h1>
         <!-- <h3 class="tagline">Senior Data Scientist</h3> -->
         <!-- <span style="display: inline;"> > </span> -->
