--- a/index.html
+++ b/index.html
@@ -89,15 +89,13 @@
         <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
         <div class="summary">
           <p>
-            I am a highly motivated data professional with more than 10 years' experience. I am passionate about exploring, analysing and solving problems with all kinds of data. 
-          </p>
-
-          <p>
-            I have experience leading data projects and proficiency using a wide range of analytical software and communicating results to non-technical audiences.
-            <!-- I have worked as an Analyst at Statistics New Zealand and the Ministry of Social Development, as a Senior Analyst at the Social Investment Agency and as a Data Analyst at the Electricity Authority. -->
+            I am a dedicated and experienced data professional with a passion for exploring, analysing, and solving problems through the power of data. With over 10 years  experience, I have honed my skills in leveraging data to drive actionable insights.
           </p>
           <p>
-            My current role is at <a href="https://www.nicholsonconsulting.co.nz/">Nicholson Consulting</a> as an <b>Analytics Lead</b>.
+            Having worked extensively in and for government agencies, I possess a deep understanding of the unique challenges and requirements of the public sector. My previous roles in data and statistics within government agencies have equipped me with valuable expertise in navigating complex data landscapes and delivering meaningful outcomes.
+          </p>
+          <p>
+            Currently serving as an <b>Analytics Lead</b> at <a href="https://www.nicholsonconsulting.co.nz/">Nicholson Consulting</a>, I play a key role in leading and overseeing data projects. I bring a versatile skill set and proficiency in a wide range of analytical software, enabling me to effectively transform raw data into valuable insights that resonate with diverse audiences, including non-technical stakeholders.
           </p>
         </div><!--//summary-->
       </section><!--//section-->
@@ -114,7 +112,7 @@
             <div class="company">Nicholson Consulting</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As an Analytics Lead at Nicholson Consulting, my duties involve having a lead role overseeing projects and working collaboratively with our CEO, Principal Data Scientist, Senior Data Scientists, Data Scientists, and clients to deliver various analytical projects.</p>
+            <p>As an Analytics Lead at Nicholson Consulting, my primary focus is on delivering value to our clients. I take the lead in overseeing projects and work closely with our CEO, Senior Data Scientists, and Data Scientists to ensure that we provide the best possible solutions for our clients' needs. By collaborating closely with our clients, we understand their unique challenges and goals, allowing us to tailor our analytical projects to deliver tangible value and meaningful insights.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -127,7 +125,7 @@
             <div class="company">Nicholson Consulting</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As a Senior Data Scientist at Nicholson Consulting, my duties involved having a lead role working collaboratively with our CEO, Principal Data Scientist, Senior Data Scientists, Data Scientist, Software Developers and clients to deliver various analytical projects.</p>
+            <p>As a Senior Data Scientist at Nicholson Consulting, my duties involved having a lead role working collaboratively with our CEO, Senior Data Scientists, Data Scientist, Software Developers and clients to deliver analytical projects.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -226,7 +224,7 @@
       <section class="section projects-section">
         <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
         <div class="intro">
-          <p>The following are a collection of side projects I have worked on in my spare time.</p>
+          <p>The following are a collection of side projects I previously worked on in my spare time.</p>
         </div>
         <div class="item">
           <span class="project-title"><a href="https://conrad.shinyapps.io/vplyr/">vplyr</a></span> - <span class="project-tagline">
@@ -265,14 +263,6 @@
         <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
         <div class="skillset">
 
-          <!-- <div class="item">
-            <h3 class="level-title">Time management and work ethic</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="95%">
-              </div>
-            </div>
-          </div> -->
-
           <div class="item">
             <h3 class="level-title">R &amp; Shiny</h3>
             <div class="level-bar">
@@ -291,6 +281,14 @@
 
           <div class="item">
             <h3 class="level-title">Statistical Analysis</h3>
+            <div class="level-bar">
+              <div class="level-bar-inner" data-level="80%">
+              </div>
+            </div><!--//level-bar-->
+          </div><!--//item-->
+
+          <div class="item">
+            <h3 class="level-title">Project Management</h3>
             <div class="level-bar">
               <div class="level-bar-inner" data-level="80%">
               </div>
@@ -344,7 +342,25 @@
         <h2 class="section-title"><i class="fa fa-book"></i>Published Work</h2>
 
         <div class="item">
-          <span class="project-tagline"><a href="http://www.treasury.govt.nz/publications/research-policy/ap/2016/16-01">Christopher Ball, Sarah Crichton, Robert Templeton and Sarah Tumen, Rissa Ota and Conrad MacCormick (2016). <b>Characteristics of Children at Greater Risk of Poor Outcomes as Adults</b></a></span>
+          <span class="project-tagline"><a href="https://journals.sagepub.com/doi/full/10.1177/10870547231177469">Francesca Anns, Stephanie D’Souza, Conrad MacCormick, Brigit Mirfin-Veitch, Betony Clasby, Nathan Hughes, Warren Forster, Eden Tuisaula and Nicholas Bowden (2023)<b>Risk of Criminal Justice System Interactions in Young Adults with Attention-Deficit/Hyperactivity Disorder: Findings From a National Birth Cohort</b></a></span>
+        </div>
+
+        <br>
+
+        <div class="item">
+          <span class="project-tagline"><a href="https://journals.sagepub.com/doi/full/10.1177/13623613211065541">Nicholas Bowden, Barry Milne, Richard Audas, Betony Clasby, Joanne Dacombe, Warren Forster, Jesse Kokaua, Sheree Gibb, Nathan Hughes, Conrad MacCormick, Kirsten Smiler, Barry Taylor and Brigit Mirfin-Veitch (2021)<b>Criminal justice system interactions among young adults with and without autism: A national birth cohort study in New Zealand</b></a></span>
+        </div>
+
+        <br>
+
+        <div class="item">
+          <span class="project-tagline"><a href="https://swa.govt.nz/assets/Uploads/Measuring-the-wellbeing-impacts-of-public-policy-social-housing.pdf">Simon Anastasiadis, Nafees Anwar, Vinay Benny, Wen Lee, Conrad MacCormick, Conal Smith, Ben Vandenbroucke (2018)<b>Measuring the wellbeing impacts of public policy : social housing</b></a></span>
+        </div>
+
+        <br>
+
+        <div class="item">
+          <span class="project-tagline"><a href="http://www.treasury.govt.nz/publications/research-policy/ap/2016/16-01">Christopher Ball, Sarah Crichton, Robert Templeton and Sarah Tumen, Rissa Ota and Conrad MacCormick (2016)<b>Characteristics of Children at Greater Risk of Poor Outcomes as Adults</b></a></span>
         </div>
 
         <br>
@@ -355,23 +371,7 @@
 
         <br>
 
-        <div class="item">
-          <span class="project-tagline"><a href="http://www.stats.govt.nz/browse_for_stats/income-and-work/employment_and_unemployment/new-quality-measures-hlfs.aspx">Griffiths, D and MacCormick, C (2013). <b>New Quality Measures for the Household Labour Force Survey</b></a></span>
-        </div>
-
       </section><!--//skills-section-->
-
-      <!-- <section class="section comic-section">
-        <h2 class="section-title"><i class="fa fa-book"></i>Comic Strip</h2>
-        <div class="comic">
-          <a href="https://www.storyboardthat.com/storyboards/c-mac/dplyr--mutate">
-            <img src="//sbt.blob.core.windows.net/storyboards/c-mac/dplyr--mutate.png"
-            style="width: 100%; z-index: 1; position: relative;"/>
-          </a>
-          <br>
-          <a href="http://www.storyboardthat.com">Made with Storyboard That</a>
-        </div>
-      </section> -->
 
       <section class="section">
         <h2 class="section-title"><i class="fa fa-laptop"></i>R Playground</h2>
