--- a/index.html
+++ b/index.html
@@ -342,25 +342,25 @@
         <h2 class="section-title"><i class="fa fa-book"></i>Published Work</h2>
 
         <div class="item">
-          <span class="project-tagline"><a href="https://journals.sagepub.com/doi/full/10.1177/10870547231177469">Francesca Anns, Stephanie D’Souza, Conrad MacCormick, Brigit Mirfin-Veitch, Betony Clasby, Nathan Hughes, Warren Forster, Eden Tuisaula and Nicholas Bowden (2023)<b>Risk of Criminal Justice System Interactions in Young Adults with Attention-Deficit/Hyperactivity Disorder: Findings From a National Birth Cohort</b></a></span>
+          <span class="project-tagline"><a href="https://journals.sagepub.com/doi/full/10.1177/10870547231177469">Francesca Anns, Stephanie D’Souza, Conrad MacCormick, Brigit Mirfin-Veitch, Betony Clasby, Nathan Hughes, Warren Forster, Eden Tuisaula and Nicholas Bowden (2023). <b>Risk of Criminal Justice System Interactions in Young Adults with Attention-Deficit/Hyperactivity Disorder: Findings From a National Birth Cohort</b></a></span>
         </div>
 
         <br>
 
         <div class="item">
-          <span class="project-tagline"><a href="https://journals.sagepub.com/doi/full/10.1177/13623613211065541">Nicholas Bowden, Barry Milne, Richard Audas, Betony Clasby, Joanne Dacombe, Warren Forster, Jesse Kokaua, Sheree Gibb, Nathan Hughes, Conrad MacCormick, Kirsten Smiler, Barry Taylor and Brigit Mirfin-Veitch (2021)<b>Criminal justice system interactions among young adults with and without autism: A national birth cohort study in New Zealand</b></a></span>
+          <span class="project-tagline"><a href="https://journals.sagepub.com/doi/full/10.1177/13623613211065541">Nicholas Bowden, Barry Milne, Richard Audas, Betony Clasby, Joanne Dacombe, Warren Forster, Jesse Kokaua, Sheree Gibb, Nathan Hughes, Conrad MacCormick, Kirsten Smiler, Barry Taylor and Brigit Mirfin-Veitch (2021). <b>Criminal justice system interactions among young adults with and without autism: A national birth cohort study in New Zealand</b></a></span>
         </div>
 
         <br>
 
         <div class="item">
-          <span class="project-tagline"><a href="https://swa.govt.nz/assets/Uploads/Measuring-the-wellbeing-impacts-of-public-policy-social-housing.pdf">Simon Anastasiadis, Nafees Anwar, Vinay Benny, Wen Lee, Conrad MacCormick, Conal Smith, Ben Vandenbroucke (2018)<b>Measuring the wellbeing impacts of public policy : social housing</b></a></span>
+          <span class="project-tagline"><a href="https://swa.govt.nz/assets/Uploads/Measuring-the-wellbeing-impacts-of-public-policy-social-housing.pdf">Simon Anastasiadis, Nafees Anwar, Vinay Benny, Wen Lee, Conrad MacCormick, Conal Smith, Ben Vandenbroucke (2018). <b>Measuring the wellbeing impacts of public policy : social housing</b></a></span>
         </div>
 
         <br>
 
         <div class="item">
-          <span class="project-tagline"><a href="http://www.treasury.govt.nz/publications/research-policy/ap/2016/16-01">Christopher Ball, Sarah Crichton, Robert Templeton and Sarah Tumen, Rissa Ota and Conrad MacCormick (2016)<b>Characteristics of Children at Greater Risk of Poor Outcomes as Adults</b></a></span>
+          <span class="project-tagline"><a href="http://www.treasury.govt.nz/publications/research-policy/ap/2016/16-01">Christopher Ball, Sarah Crichton, Robert Templeton and Sarah Tumen, Rissa Ota and Conrad MacCormick (2016). <b>Characteristics of Children at Greater Risk of Poor Outcomes as Adults</b></a></span>
         </div>
 
         <br>
