--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
       <div class="interests-container container-block">
         <h2 class="container-block-title">Interests</h2>
         <ul class="list-unstyled interests-list">
-          <li><i class="fas fa-baby"></i> Being with my son</li>
+          <li><i class="fas fa-child"></i> Being with my son</li>
             <li><i class="fas fa-guitar"></i> Playing guitar</li>
           <li><i class="fas fa-book"></i> Reading</li>
-          <li><i class="fas fa-snowboarding"></i> Snowboarding</li>
           <li><i class="fas fa-terminal"></i> Programming</li>
           <li><i class="fas fa-bar-chart"></i> Making data visualisations</li>
         </ul>
@@ -89,10 +88,10 @@
         <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
         <div class="summary">
           <p>
-            I am a dedicated and experienced data professional with a passion for exploring, analysing, and solving problems through the power of data. With over 10 years  experience, I have honed my skills in leveraging data to drive actionable insights.
+            I am a dedicated and experienced data professional with a passion for exploring, analysing, and solving problems using data. I have over 13 years’ experience in data science and statistical roles and nearly 10 years as an accredited Integrated Data Infrastructure (IDI) researcher. During this time I have honed my skills in leveraging data to drive actionable insights.
           </p>
           <p>
-            Having worked extensively in and for government agencies, I possess a deep understanding of the unique challenges and requirements of the public sector. My previous roles in data and statistics within government agencies have equipped me with valuable expertise in navigating complex data landscapes and delivering meaningful outcomes.
+            I have good time management and a strong work ethic with a drive to produce high-quality work and meet deadlines. I have a strong customer focus with experience working with a range of stakeholders – especially from my time as a data science consultant. I look to understand a customer’s needs and work closely with them to create a product that will meet those needs.
           </p>
           <p>
             Currently serving as an <b>Analytics Lead</b> at <a href="https://www.nicholsonconsulting.co.nz/">Nicholson Consulting</a>, I play a key role in leading and overseeing data projects. I bring a versatile skill set and proficiency in a wide range of analytical software, enabling me to effectively transform raw data into valuable insights that resonate with diverse audiences, including non-technical stakeholders.
@@ -112,7 +111,8 @@
             <div class="company">Nicholson Consulting</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As an Analytics Lead at Nicholson Consulting, my primary focus is on delivering value to our clients. I take the lead in overseeing projects and work closely with our CEO, Senior Data Scientists, and Data Scientists to ensure that we provide the best possible solutions for our clients' needs. By collaborating closely with our clients, we understand their unique challenges and goals, allowing us to tailor our analytical projects to deliver tangible value and meaningful insights.</p>
+            <p>As an Analytics Lead at Nicholson Consulting, I play a key role in leading data and analytical projects working closely with the CEO and other Analytics Leads. Most project teams I lead range in size from 3-5 data scientists. As well as this, I am a people manager for 2 staff members. Using my technical expertise, I support my team to improve their proficiency in a wide range of analytical software, enabling them to generate valuable insights that resonate with diverse audiences, including non-technical stakeholders. 
+            </p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -125,7 +125,7 @@
             <div class="company">Nicholson Consulting</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As a Senior Data Scientist at Nicholson Consulting, my duties involved having a lead role working collaboratively with our CEO, Senior Data Scientists, Data Scientist, Software Developers and clients to deliver analytical projects.</p>
+            <p>As a Senior Data Scientist at Nicholson Consulting, my duties involved having a lead role collaborating with clients in delivering various analytical projects – primarily using the IDI.</p>
           </div><!--//details-->
         </div><!--//item-->
 
