Fix grammatical errors in job title description

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             I have good time management and a strong work ethic with a drive to produce high-quality work and meet deadlines. I have a strong customer focus with experience working with a range of stakeholders – especially from my time as a data science consultant. I look to understand a customer’s needs and work closely with them to create a product that will meet those needs.
           </p>
           <p>
-            Currently serving as an <b>Principal Data Scientist</b> at <a href="https://www.nicholsonconsulting.co.nz/">Nicholson Consulting</a>, I play a key role in leading and overseeing data projects. I bring a versatile skill set and proficiency in a wide range of analytical software, enabling me to effectively transform raw data into valuable insights that resonate with diverse audiences, including non-technical stakeholders.
+            Currently serving as a <b>Principal Data Scientist</b> at <a href="https://www.nicholsonconsulting.co.nz/">Nicholson Consulting</a>, I play a key role in leading and overseeing data projects. I bring a versatile skill set and proficiency in a wide range of analytical software, enabling me to effectively transform raw data into valuable insights that resonate with diverse audiences, including non-technical stakeholders.
           </p>
         </div><!--//summary-->
       </section><!--//section-->
@@ -111,7 +111,7 @@
             <div class="company">Nicholson Consulting</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As an Principal Data Scientist at Nicholson Consulting, I play a key role in leading data and analytical projects working closely with the CEO and other Principal Data Scientists. Most project teams I lead range in size from 3-5 data scientists. As well as this, I am a people manager for 2 staff members. Using my technical expertise, I support my team to improve their proficiency in a wide range of analytical software, enabling them to generate valuable insights that resonate with diverse audiences, including non-technical stakeholders. 
+            <p>As a Principal Data Scientist at Nicholson Consulting, I play a key role in leading data and analytical projects working closely with the CEO and other Principal Data Scientists. Most project teams I lead range in size from 3-5 data scientists. As well as this, I am a people manager for 2 staff members. Using my technical expertise, I support my team to improve their proficiency in a wide range of analytical software, enabling them to generate valuable insights that resonate with diverse audiences, including non-technical stakeholders. 
             </p>
           </div><!--//details-->
         </div><!--//item-->
